# mailpeek

./: .gitignore  README.md  pyproject.toml
example/: read_emails.py  run_idle.py
src/email_reader/: cli.py
tests/: test_reader.py
